# class-imbalance-loss-comparison

./: .gitignore  README.md  pyproject.toml
Creditcard/: experiment_config.yaml  focal_loss.py  train.py
Moons/: data_viewer.ipynb  dataset.py  experiment_config.yaml  focal_loss.py  model.py  plot_metrics.py  train.py  utils.py
Visualization_Own/: plot.py  plot_convergence.py  plot_final_f1.py  plot_summary.py  util.py
Visulaisation/: ce_wce_plot.ipynb  data_viewer_creditcard.ipynb  data_viewer_moons.ipynb  dataset_viewer_moons.ipynb  depricated.ipynb  focal_factor_test.py
creditcard/: README.md  experiment_config.yaml  focal_loss.py  model.py  train.py  train_creditcard.py  utils.py
creditcard/configs/: large_config.yaml  main_config.yaml  medium_config.yaml  small_config.yaml
creditcard/utils/: data_util.py  file_util.py  log_util.py
